--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,14 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 ANALYTICS_VIEW_ID=
+
+ANALYTICS_CONFIGURED=false
+ANALYTICS_VIEW_ID=
+ANALYTICS_CREDENTIAL_PATH="storage/analytics/**************.json"
+ANALYTICS_COUNTRY="Pakistan"
+ANALYTICS_COUNTRY_CODE="PK"
+
+GOOGLE_CALENDAR_ID
+
+
+GOOGLE_MAPS_API_KEY=
