--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.7",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "pusher/pusher-php-server": "~2.6",
         "spatie/activitylog": "^2.4",
         "spatie/laravel-activitylog": "1.16.0",
         "spatie/laravel-analytics": "^3.6",
