--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "vue-loader": "^15.0.5",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16"
+  },
+  "dependencies": {
+    "laravel-echo": "^1.3.5",
+    "pusher-js": "^4.2.2"
   }
 }
