--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-4-data-table": "^0.4.6",
     "core-js": "^2.5.4",
     "ngx-toastr": "^8.8.0",
     "rxjs": "^6.0.0",
